# Sqlite-from-scratch

./: .gitignore  CMakeLists.txt  LICENCE  Readme.md  database  database.cpp
src/: RowStruction.hpp  RowandPage.hpp  TypeEnum.hpp  utils.hpp
